Ports to minecraft 1.16.4, iceandfire 2.1.5

--- a/build.gradle
+++ b/build.gradle
@@ -15,29 +15,85 @@ buildscript {
         }
     }
     dependencies {
-        classpath "net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT"
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
     }
 }
-apply plugin: 'net.minecraftforge.gradle.forge'
+apply plugin: 'net.minecraftforge.gradle'
 //Only edit below this line, the above code adds and enables the nessasary things for Forge to be setup.
 
-version = "0.0.2"
+version = "0.1.0"
 group= "eyeofdragons"
 archivesBaseName = "eyeofdragons"
 sourceCompatibility = targetCompatibility = "1.8"
 
 minecraft {
-    version = "1.12.2-14.23.5.2768"
-    runDir = "run"
-    mappings = "stable_39"
-    makeObfSourceJar = true
+    // The mappings can be changed at any time, and must be in the following format.
+    // snapshot_YYYYMMDD   Snapshot are built nightly.
+    // stable_#            Stables are built at the discretion of the MCP team.
+    // Use non-default mappings at your own risk. they may not always work.
+    // Simply re-run your setup task after changing the mappings to update your workspace.
+    mappings channel: 'snapshot', version: '20201028-1.16.3'
+
+    // Default run configurations.
+    // These can be tweaked, removed, or duplicated as needed.
+    runs {
+        client {
+            workingDirectory project.file('run')
+
+            // Recommended logging data for a userdev environment
+            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+
+            // Recommended logging level for the console
+            property 'forge.logging.console.level', 'debug'
+
+            mods {
+                eyeofdragons {
+                    source sourceSets.main
+                }
+            }
+        }
+
+        server {
+            workingDirectory project.file('run')
+
+            // Recommended logging data for a userdev environment
+            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+
+            // Recommended logging level for the console
+            property 'forge.logging.console.level', 'debug'
+
+            mods {
+                eyeofdragons {
+                    source sourceSets.main
+                }
+            }
+        }
+
+        data {
+            workingDirectory project.file('run')
+
+            // Recommended logging data for a userdev environment
+            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'
+
+            // Recommended logging level for the console
+            property 'forge.logging.console.level', 'debug'
+
+            // Specify the modid for data generation, where to output the resulting resource, and where to look for existing resources.
+            args '--mod', 'eyeofdragons', '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
+
+            mods {
+                eyeofdragons {
+                    source sourceSets.main
+                }
+            }
+        }
+    }
 }
+
+sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
     mavenCentral()
-//    maven {
-//        url "https://maven.mcmoddev.com/"
-//    }
     maven {
         name "JEI"
         url "http://dvs1.progwml6.com/files/maven"
@@ -65,38 +121,17 @@ repositories {
 }
 
 dependencies {
-//    deobfCompile "net.ilexiconn:llibrary:1.7.9-1.12.2"
-    compile 'ice-and-fire-dragons:iceandfire:1.7.1:1.12.2'
+    minecraft 'net.minecraftforge:forge:1.16.4-35.1.36'
+
+    compile 'ice-and-fire-dragons:iceandfire:2.1.5:1.16.4'
+    compile 'citadel:citadel:1.5.3:deobf'
 }
-
-processResources
-{
-    // this will ensure that this task is redone when the versions change.
-    inputs.property "version", project.version
-    inputs.property "mcversion", project.minecraft.version
-
-    // replace stuff in mcmod.info, nothing else
-    from(sourceSets.main.resources.srcDirs) {
-        include 'mcmod.info'
-
-        // replace version and mcversion
-        expand 'version':project.version, 'mcversion':project.minecraft.version
-    }
-
-    // copy everything else, thats not the mcmod.info
-    from(sourceSets.main.resources.srcDirs) {
-        exclude 'mcmod.info'
-    }
-}
-
-minecraft.coreMod = "de.curlybracket.eyeofdragons.EyeOfDragonsPlugin"
 
 jar {
     manifest {
         attributes 'FMLCorePlugin': "de.curlybracket.eyeofdragons.EyeOfDragonsPlugin", 'FMLCorePluginContainsFMLMod': true
     }
 }
-
 
 task devJar(type: org.gradle.jvm.tasks.Jar) {
     classifier = "dev"
